--- a/main.html
+++ b/main.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Testimonials</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Testimonials</h1>
+      <div class="card">
+        <p class="text">
+          This product is amazing! I highly recommend it to anyone in need of a
+          solution like this.
+        </p>
+        <span class="byline"> -John Doe </span>
+      </div>
+      <div class="card">
+        <p class="text">
+          I have been using this for a few weeks now and it has completely
+          transformed my workflow.
+        </p>
+        <span class="byline"> -Jane Smith </span>
+      </div>
+    </div>
+  </body>
 </html>
