--- a/main.html
+++ b/main.html
@@ -14,14 +14,14 @@
           This product is amazing! I highly recommend it to anyone in need of a
           solution like this.
         </p>
-        <span class="byline"> -John Doe </span>
+        <p class="byline"> -John Doe </p>
       </div>
       <div class="card">
         <p class="text">
           I have been using this for a few weeks now and it has completely
           transformed my workflow.
         </p>
-        <span class="byline"> -Jane Smith </span>
+        <p class="byline"> -Jane Smith </p>
       </div>
     </div>
   </body>
